clusters/cl01tl/manifests/dependency-track/Service-dependency-track-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: dependency-track-frontend
  namespace: dependency-track
  labels:
    helm.sh/chart: dependency-track-0.44.0
    app.kubernetes.io/part-of: dependency-track
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: dependency-track
    app.kubernetes.io/name: dependency-track-frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/version: 4.14.1
spec:
  type: "ClusterIP"
  ports:
    - name: web
      port: 8080
      targetPort: web
  selector:
    app.kubernetes.io/instance: dependency-track
    app.kubernetes.io/name: dependency-track-frontend
    app.kubernetes.io/component: frontend
